<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_figma"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="658dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/register_desc"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:paddingBottom="8dp"
            android:text="@string/register_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/register_name_value"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/my_bg"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/register_name_value"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/register_email"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/register_email_value"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/my_bg"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/register_email_value"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/register_password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/register_password_value"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/my_bg"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/register_password_value"
            android:inputType="textWebEditText|textPassword"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/yellow_figma"
            android:fontFamily="@font/poppins"
            android:text="@string/register_button"
            android:textColor="@color/black_figma"
            app:cornerRadius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_button_legend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/register_button_legend"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/register_button_legend_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/register_button_legend_link"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>