<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.user_context.CreateScheduleActivity">

    <LinearLayout
        android:layout_width="416dp"
        android:layout_height="613dp"
        android:background="@color/black_figma"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="538dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create_schedule_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/create_schedule_title"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/create_schedule_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="8dp"
                android:text="@string/create_schedule_date"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/create_schedule_date_value"
                android:layout_width="354dp"
                android:layout_height="48dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/my_bg"
                android:backgroundTint="@color/yellow_figma"
                android:fontFamily="@font/poppins"
                android:text="@string/create_schedule_date_value"
                android:textColor="@color/white"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/create_schedule_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="8dp"
                android:text="@string/create_schedule_time"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/create_schedule_time_value"
                android:layout_width="356dp"
                android:layout_height="48dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/my_bg"
                android:backgroundTint="@color/yellow_figma"
                android:fontFamily="@font/poppins"
                android:text="@string/create_schedule_time_value"
                android:textColor="@color/white"
                app:cornerRadius="10dp" />


            <Button
                android:id="@+id/create_schedule_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/yellow_figma"
                android:fontFamily="@font/poppins"
                android:text="@string/create_schedule_button"
                android:textColor="@color/black_figma"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@color/gray_figma"
            android:backgroundTint="@color/gray_figma"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_shop_home"
                    android:textColor="@color/yellow_figma" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shop" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_shop_lojas"
                    android:textColor="@color/yellow_figma" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chat" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_shop_chat"
                    android:textColor="@color/yellow_figma" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/perfil" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_shop_perfil"
                    android:textColor="@color/yellow_figma" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>