<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.manager_context.CreateProductActivity">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="735dp"
        android:background="@color/black_figma"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="603dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create_product_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/create_product_title"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/create_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="52dp"
                android:paddingBottom="8dp"
                android:text="@string/create_product_name"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/create_product_name_value"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/my_bg"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/create_product_name_value"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/create_product_email_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="8dp"
                android:text="@string/create_product_email"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/create_product_email_value"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/my_bg"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/create_product_email_value"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/create_product_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="@color/yellow_figma"
                android:fontFamily="@font/poppins"
                android:text="@string/cadastra_button"
                android:textColor="@color/black_figma"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>